--- a/index.html
+++ b/index.html
@@ -18,23 +18,23 @@
         <div class="iconLogo">
           <img src="./img/sub_logo.png" alt="">
         </div>
-        <div class="loginSec">
-          <h2>TQMS LOGIN</h2>
+      </div>
+      <div class="loginSec">
+        <div class="inputSec">
+          <h2 class="tqmsTitle">TQMS LOGIN</h2>
           <input type="text" placeholder="Enter your ID">
           <input type="password" name="" id="" placeholder="Enter your password">
-          <button>LOG IN</button>
-          <div class="saveID">
-            <input type="checkbox" name="" id="">아이디 저장
-          </div>
-          <div class="pWrap">
-            <p>접속 장애가 발생할 경우
-              아래 메일로 문의하여 주시기 바랍니다.
-              kkwak@borgwarner.com</p>
-            <p>시스템 정보는 당사 업무처리 이외의 사용 및 외부 유출을
-              절대 금하며 회사의 사전 승인없이 정보 유출시
-              형사 처벌등의 법적조치를 받을 수 있습니다.</p>
-            <p>Copyright ⓒ 2021 BORGWARNER Chungju-city</p>
-          </div>
+          <button class="loginBtn">LOG IN</button>
+        </div>
+        <div class="saveID">
+          <input type="checkbox" name="" id="">아이디 저장
+        </div>
+        <div class="pWrap">
+          <p>접속 장애가 발생할 경우<br>
+            아래 메일로 문의하여 주시기 바랍니다.<br>
+            kkwak@borgwarner.com</p>
+          <p>시스템 정보는 당사 업무처리 이외의 사용 및 외부 유출을 절대 금하며 회사의 사전 승인없이 정보 유출시 형사 처벌등의 법적조치를 받을 수 있습니다.</p>
+          <p>Copyright ⓒ 2021 BORGWARNER Chungju-city</p>
         </div>
       </div>
     </div>
@@ -42,7 +42,7 @@
       <div class="panel">
         <img src="./img/main_bg.jpg" alt="">
       </div>
-      <p>Paving the way for a cleaner, more energy-efficient world</p>
+      <p>Paving The Way For A Cleaner, More Energy-efficient World</p>
     </div>
   </div>
 </body>
